--- a/Java/CrudLegacyServlet/README
+++ b/Java/CrudLegacyServlet/README
@@ -1,1 +1,21 @@
+Maven Dependencies:
+* Hibernate Entity Manager
+* Hibernate Tools
+* H2 Database
+* JSTL
+* TagLibs
 
+Files Types:
+* Java
+* JSP
+* SQL
+* Css
+* Jpg
+
+= Application Story =
+1. Home Page
+2. Init H2 embedded tabase
+2. UserList Page
+3. Import SQL in database
+4. List Users
+5. ADD / Delete users with interface
