--- a/Java/CrudLegacyServlet/README
+++ b/Java/CrudLegacyServlet/README
@@ -1,5 +1,7 @@
 /!\Add JavaEE 6 as Jar Depencies /!\
 
+![alt text](https://imgur.com/xcIVaWQ)
+
 Maven Dependencies:
 * Hibernate Entity Manager
 * Hibernate Tools
